style.css
body {
    background-color: #8681bd;
    margin: 0;
    padding: 0;
}

.active {
    background-color: violet;
    border-radius: 1em;
}

.box {
    width: 15em;
    min-height: 15em;
    background-color: #fff7d3;
    border-radius: 25px;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
}

.box h2 {
    font-family: Lato;
    text-align: center;
    font-size: 3em;
    font-weight: 300;
}

.box p {
    font-family: Lato;
    text-align: center;
    font-size: 1.2em;
}

.box p br {
    all: initial;
}

.box a {
    margin-bottom: initial;
}

.box a button {
    font-family: Lato;
    font-size: 1.5em;
    background-color: #3d376b;
    color: white;
    border: none;
    border-radius: 1em;
    padding: 0.5em 1em;
    margin-top: 1em;
    transition-duration: 0.4s;
    cursor: pointer;
}

.box a button:hover {
    background-color: violet;
}

.box h2 {
    margin-bottom: initial;
}

.centered-title {
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 5em;
    text-transform: uppercase;
    font-family: Calibri;
    color: white;
}

.centered-title img {
    margin-left: 10px;
    height: 1em;
}

.section {
    height: 15em;
    width: 100%;
}

.section img {
    height: 15em;
}

.section p,
.section li {
    font-size: 2em;
    font-family: Calibri;
    text-align: center;
}

br {
    content: "";
    display: block;
    margin-bottom: 5em;
}

.nav-container {
    display: flex;
    justify-content: center;
}

.nav {
    display: inline-block;
    border-radius: 25px;
    list-style-type: none;
    margin: 0;
    margin-top: 1em;
    padding: 0;
    overflow: hidden;
    background-color: #333;
    font-family: Lato;
}

.nav li {
    display: inline;
    margin-right: 0.25em;
    margin-left: 0.25em;
    float: left;
}

.nav li a {
    display: block;
    color: white;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    transition-duration: 0.4s;
}

.nav li.active a:hover {
    background-color: violet;
}

.nav li a:hover {
    background-color: #111;
    border-radius: 1em;
}

